--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ nav li a:before {-webkit-transition: width .2s ease-in-out;transition: width .2s
 .main-mod-1 .con li dt .price{ float: right; display: block; height: 20px; line-height: 20px; color: #fff; background: #b70408; margin: 5px 0; padding: 0 5px; border-radius: 5px;}
 .main-mod-2 .con{ position: relative;}
 .main-mod-2 .item{ margin-bottom: 50px;}
-.main-mod-2 .item img{ height: 460px; width: 460px; overflow: hidden;border-radius: 10px}
+.main-mod-2 .item img{ height: 460px; width: 460px; overflow: hidden;border-radius: 20px}
 .main-mod-2 .item-l .img{ float: left; }
 .main-mod-2 .item-r .img{ float: right; }
 .main-mod-2 .item-l .img-txt{ margin-left: 460px;margin-top: 15px;}
@@ -133,7 +133,7 @@ transform:rotate(15deg);
 .detail-mod .con { width: 1160px; margin: 0 auto; padding-top: 30px;}
 .detail-mod-1 .con li { width: 290px; float: left; }
 .detail-mod-1 .con li dl{ padding: 0 20px; overflow: hidden;}
-.detail-mod-1 .con .img{ width: 100%; height: 475px; overflow: hidden;border-radius:10px;}
+.detail-mod-1 .con .img{ width: 100%; height: 475px; overflow: hidden;border-radius:20px;}
 .detail-mod-1 .con .img img{ width: 100%;}
 .detail-mod-1 .con dt{ height: 70px; line-height: 70px; font-size: 45px; color: #2c2c2c; text-align: center; overflow: hidden;}
 .detail-mod-1 .con .txt{ font-size: 14px; color: #848484; max-height: 280px; line-height: 20px; overflow: hidden;text-align: justify;}
@@ -142,7 +142,7 @@ transform:rotate(15deg);
 
 .detail-mod-2{ margin-bottom: 80px;}
 .detail-mod-2 .con dl{ padding: 0 20px; }
-.detail-mod-2 .con dl .img{ height: 490px; width: 720px; margin-right: 20px; overflow: hidden;border-radius: 10px;}
+.detail-mod-2 .con dl .img{ height: 490px; width: 720px; margin-right: 20px; overflow: hidden;border-radius: 20px;}
 .detail-mod-2 .con dl .img img{ width: 100%;}
 .detail-mod-2 .con dl .txt{ font-size: 24px; color: #4f4f4e; line-height: 36px; height: 472px; overflow: hidden;}
 .detail-mod-2 .con dl .txt p{ margin-top: 18px;text-align:justify;font-size:23px;}
@@ -235,7 +235,7 @@ animation-fill-mode:both }
 		width: 100%;
 	}
 	.ban-index{background: url(../images/top-ad.jpg) no-repeat center;height: 600px; background-size: 100% 100%;}
-	.ban-detail{background: url(../images/top-ad-content.jpg) no-repeat center; height: 450px;background-size: 100% 100%;}
+	.ban-detail{background: url(../images/top-ad-content.jpeg) no-repeat center; height: 450px;background-size: 100% 100%;}
 /*使用媒体查询技术：根据屏幕尺寸决定显示*/
 /*PC：显示4个图  992px*/
 @media screen and (min-width:992px){
@@ -296,7 +296,7 @@ animation-fill-mode:both }
 	.main-mod-1 .con li dt {margin-bottom:15px; padding-top: 10px;}
 	.main-mod-1 {margin-bottom:0;}
 .ban-index{background: url(../images/top-ad.jpg) no-repeat right; background-size: 230% 100%; height: 200px;}
-.ban-detail{background: url(../images/top-ad-content.jpg) no-repeat right; background-size: 200% 100%; height: 170px;}
+.ban-detail{background: url(../images/top-ad-content.jpeg) no-repeat right; background-size: 200% 100%; height: 170px;}
     /*==========关于我们========*/
     .about section {min-width:320px;}
 	.about section .a_banner {width:100%;}
